# ladim_aggregate

./: .gitignore  .travis.yml  CHANGELOG.md  README.md  pytest.ini  setup.cfg
.circleci/: config.yml
.github/workflows/: pypi.yml  testing.yml
src/ladim_aggregate/: __init__.py  __main__.py  geotag.py  histogram.py  input.py  output.py  parseconfig.py  proj.py  script.py  sql.py
src/ladim_aggregate/examples/: __init__.py  count_filtered_particles_in_one_dim.yaml  count_particles_in_one_dim.yaml  count_particles_per_time_step.yaml  three_dim_histogram.yaml  two_dim_histogram.yaml
src/ladim_aggregate/examples/complex/: aggregate.yaml  count.nc.yaml  count_20190703000000_12345.nc.yaml  count_20190703000000_12346.nc.yaml  count_20200703000000_12345.nc.yaml  count_20200703000000_12346.nc.yaml  ladim_2019.nc.yaml  ladim_2020.nc.yaml
src/ladim_aggregate/examples/connect/: aggregate.yaml
src/ladim_aggregate/examples/filter/: aggregate.yaml  count.nc.yaml  ladim.nc.yaml
src/ladim_aggregate/examples/geotag/: aggregate.yaml  count.nc.yaml  ladim.nc.yaml
src/ladim_aggregate/examples/grid_1D/: aggregate.yaml  count.nc.yaml  ladim.nc.yaml
src/ladim_aggregate/examples/grid_2D/: __init__.py  aggregate.yaml  count.nc.yaml
src/ladim_aggregate/examples/grid_3D/: aggregate.yaml  count.nc.yaml  ladim.nc.yaml
src/ladim_aggregate/examples/multi/: aggregate.yaml
tests/: test_examples.py  test_geotag.py  test_histogram.py  test_input.py  test_main.py  test_outfile.py  test_output.py  test_parseconfig.py  test_proj.py  test_script.py  test_sql.py  test_stress.py
(+9 files in other folders)
