[metadata]
name = ladim_aggregate
version = attr: ladim_aggregate.__version__
author = Pål Næverlid Sævik
author_email = paal.naeverlid.saevik@hi.no
license = MIT


[options]
packages = find:
package_dir =
    =src
install_requires =
    numpy
    pytest
    xarray
    netCDF4
    PyYAML
    pyproj
    pandas
    numexpr
python_requires = >=3.6
include_package_data = True

[options.entry_points]
console_scripts =
    ladim_aggregate = ladim_aggregate:main

[options.package_data]
examples = *.*

[options.packages.find]
where=src
