[metadata]
name = ladim_aggregate
version = attr: ladim_aggregate.__version__
description = Aggregate tool for LADiM output files
long_description = file: README.md
long_description_content_type = text/markdown
author = Pål Næverlid Sævik
author_email = paal.naeverlid.saevik@hi.no
license = MIT


[options]
packages = find:
package_dir =
    =src
install_requires =
    duckdb
    matplotlib
    netCDF4
    numexpr
    numpy
    pytest
    pandas
    pyproj
    PyYAML
    scipy
    xarray
python_requires = >=3.7
include_package_data = True

[options.entry_points]
console_scripts =
    ladim_aggregate = ladim_aggregate.script:main_from_command_line
    crecon = ladim_aggregate.script:main_from_command_line

[options.package_data]
* = *.yaml, *.geojson

[options.packages.find]
where=src
